syntax = "proto3";

package dtc.credit.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "dtc/credit/v1/params.proto";
import "gogoproto/gogo.proto";

option go_package = "dtc/x/credit/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // MintCredit defines the MintCredit RPC.
  rpc MintCredit(MsgMintCredit) returns (MsgMintCreditResponse);

  // SubmitDeathCertificate defines the SubmitDeathCertificate RPC.
  rpc SubmitDeathCertificate(MsgSubmitDeathCertificate) returns (MsgSubmitDeathCertificateResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "dtc/x/credit/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgMintCredit defines the MsgMintCredit message.
message MsgMintCredit {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgMintCreditResponse defines the MsgMintCreditResponse message.
message MsgMintCreditResponse {}

// MsgSubmitDeathCertificate defines the MsgSubmitDeathCertificate message.
message MsgSubmitDeathCertificate {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string address = 2;
}

// MsgSubmitDeathCertificateResponse defines the MsgSubmitDeathCertificateResponse message.
message MsgSubmitDeathCertificateResponse {}
